# information_robot

./: .gitignore  .gitmodules  Makefile  README.md  bus.py  chat.py  config.py  data.tsv  data_m.tsv  db.json  do.sh  keywords.py  lecture.py  main.py  nightingale.py  pyproject.toml  swimming.py  week.py
commands/: easter_eggs.py  std.py
icu/: __init__.py  database.py  decorator.py
pluger/: Book  book.py  chat.py  keywords.py  lecture.py  nightingale.py  remind.py  swimming.py  week.py
utils/: __init__.py  database.py  decorator.py  shell.py
utils/plugins/: database.py  test.py  why.py
